--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -33,7 +32,6 @@
             </div>
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                 <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </div>
@@ -48,10 +46,44 @@
             <h1 class="title">Jeffrey Lee</h1>
             <p>Student</p>
             <div class="btn-container">
-                <button class="btn btn-color-2"onclick="window.open('./assets/Jeffrey Lee Resume.pdf')">Download</button>
+                <button class="btn btn-color-2"onclick="window.open('./assets/Jeffrey Lee Resume.pdf')">Resume</button>
                 <button class="btn btn-color-1"onclick="location.href='./#contact'">Contact Info</button>
             </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" 
+                    alt="My LinkedIn profile" 
+                    class="icon" 
+                    onClick="location.href='https://www.linkedin.com/in/jeffreylee622/'"/>
+                <img src="./assets/github.png" 
+                    alt="My Github profile" 
+                    class="icon" 
+                    onClick="location.href='https://github.com/yerffejseel'"/>
+            </div>
         </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.jpeg" alt="Profile picture" class="about-pic">
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="Education icon" class="icon">
+                        <h3>Education</h3>
+                        <p>Pursuing B.Sc. Bachelors Degree in Computer Science at the University of Washington</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus repellendus natus praesentium voluptates amet blanditiis sed quo quos! Eveniet exercitationem consequuntur hic error sint modi voluptatibus voluptates laudantium veniam. Deserunt odit dolorem non minus vitae temporibus cumque illo. Distinctio, corrupti quaerat quos repudiandae explicabo sit soluta incidunt doloremque sunt facere!
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'">
     </section>
     <script src="script.js"></script>
 </body>
