--- a/index.html
+++ b/index.html
@@ -169,18 +169,33 @@
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/dumbbell.jpeg" alt="Project 1" class="project-img"/>
-                    </div>
-                    <h2 class="experience-sub-title project-title">Workout Tracker</h2>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/yerffejseel/Workout-Web-App'">Github</button>
+        <div class="projects-container">
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/Neural.jpg" alt="Project 1" class="project-img"/>
+                        </div>
+                        <h2 class="experience-sub-title project-title">C.N.N.</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/yerffejseel/Convolutional-Neural-Network'">Github</button>
+                        </div>
                     </div>
                 </div>
-                
+            </div>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/dumbbell.jpeg" alt="Project 1" class="project-img"/>
+                        </div>
+                        <h2 class="experience-sub-title project-title">Workout Tracker</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/yerffejseel/Workout-Web-App'">Github</button>
+                        </div>
+                    </div>
+                    
+                </div>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'">
