Update resume and styling

--- a/index.html
+++ b/index.html
@@ -131,7 +131,14 @@
                             <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>React.js</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <div>
+                                <h3>PostgreSQL</h3>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                     </div>
@@ -157,6 +164,13 @@
                             <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
                             <div>
                                 <h3>MATLAB</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="experience icon" class="icon"/>
+                            <div>
+                                <h3>R</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
