--- a/index.html
+++ b/index.html
@@ -201,6 +201,20 @@
                 <div class="about-containers">
                     <div class="details-container color-container">
                         <div class="article-container">
+                            <img src="./assets/book.jpg" alt="Project 1" class="project-img"/>
+                        </div>
+                        <h2 class="experience-sub-title project-title">Book Notes</h2>
+                        <div class="btn-container">
+                            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/yerffejseel/Book-Notes'">Github</button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                        <div class="article-container">
                             <img src="./assets/dumbbell.jpeg" alt="Project 1" class="project-img"/>
                         </div>
                         <h2 class="experience-sub-title project-title">Workout Tracker</h2>
