Update media queries

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeffrey Lee - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
     <!-- Header/Hero Section -->
@@ -18,12 +19,12 @@
     <!-- About Section -->
     <section class="about">
         <div class="container" id="bio">
-            <div>
+            <div id="description">
                 <h2>About Me</h2>
-                <p id="description">Hello! I'm Jeffrey Lee, an intended Computer Science student at the University of Washington with a passion for software engineering. I am proficient in multiple frontend and backend tools. I've worked on various projects, from web development to algorithmic challenges. My goal is to build a successful career in software engineering, developing projects while continuously learning and growing in this dynamic field.</p>
+                <p>Hello! I'm Jeffrey Lee, an intended Computer Science student at the University of Washington with a passion for software engineering. I am proficient in multiple frontend and backend tools. I've worked on various projects, from web development to algorithmic challenges. My goal is to build a successful career in software engineering, developing projects while continuously learning and growing in this dynamic field.</p>
             </div>
             <img src="./assets/about-me picture.jpeg" alt="About Me Picture" id="about-pic">
-    </div>
+        </div>
     </section>
 
     <!-- Projects Section -->
@@ -120,7 +121,7 @@
             <img src="./assets/github.png" 
                 alt="Github"
                 class="icons"
-                onclick="location.href='https://github.com/yerffejseel">    
+                onclick="location.href='https://github.com/yerffejseel'">    
         </div>
     </section>
 
